# open_sound_control-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.cfg  tracks.yaml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: dynamic_bridge.launch.py
msg/: OscMessage.msg
open_sound_control/: package.xml
open_sound_control_bridge/: relay.py  setup.py
open_sound_control_bridge/config/: europi_config.yaml
open_sound_control_bridge/launch/: static_bridge.launch.py
open_sound_control_bridge/open_sound_control_bridge/: ntp_utils.py  osc_bridge.py
open_sound_control_msgs/: CHANGELOG.rst  package.xml
open_sound_control_msgs/msg/: OscBlob.msg
rpm/: ros-jazzy-open-sound-control-msgs.spec  ros-jazzy-open-sound-control.spec  template.spec
