<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_sound_control_bridge</name>
  <version>0.0.2</version>
  <description>Bridge node for converting between OSC and ROS messages</description>
  <license>Apache 2.0</license>
  <maintainer email="ve4cib@gmail.com">Chris Iverach-Brereton</maintainer>

  <exec_depend>open_sound_control_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
