<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_sound_control</name>
  <version>0.0.2</version>
  <description>Metapackage for ROS/Open Sound Control bridge</description>
  <license>Apache 2.0</license>

  <maintainer email="ve4cib@gmail.com">Chris Iverach-Brereton</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>open_sound_control_bridge</exec_depend>
  <exec_depend>open_sound_control_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
