<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_sound_control_msgs</name>
  <version>0.0.2</version>
  <description>Open Sound Control messages for ROS 2</description>
  <license>Apache 2.0</license>

  <maintainer email="ve4cib@gmail.com">Chris Iverach-Brereton</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
